@@ -7,6 +7,7 @@ import com.dpw.runner.shipment.services.commons.constants.*;
 import com.dpw.runner.shipment.services.commons.requests.*;
 import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.commons.responses.RunnerResponse;
+import com.dpw.runner.shipment.services.dao.interfaces.IConsoleShipmentMappingDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
 import com.dpw.runner.shipment.services.dao.interfaces.INetworkTransferDao;
 import com.dpw.runner.shipment.services.dao.interfaces.INotificationDao;
@@ -83,13 +84,14 @@ public class NotificationService implements INotificationService {
     private final CommonUtils commonUtils;
 
     private final INetworkTransferDao networkTransferDao;
+    private final IConsoleShipmentMappingDao consoleShipmentMappingDao;
 
     @Autowired
     public NotificationService(ModelMapper modelMapper, JsonHelper jsonHelper, INotificationDao notificationDao,
                                   MasterDataUtils masterDataUtils, ExecutorService executorService,
                                   MasterDataKeyUtils masterDataKeyUtils, IShipmentService shipmentService,
                                   IConsolidationService consolidationService, V1ServiceUtil v1ServiceUtil, INetworkTransferDao networkTransferDao,
-                                  IConsolidationDetailsDao consolidationDetailsDao, CommonUtils commonUtils) {
+                                  IConsolidationDetailsDao consolidationDetailsDao, CommonUtils commonUtils, IConsoleShipmentMappingDao consoleShipmentMappingDao) {
         this.jsonHelper = jsonHelper;
         this.notificationDao = notificationDao;
         this.masterDataUtils = masterDataUtils;
@@ -102,6 +104,7 @@ public class NotificationService implements INotificationService {
         this.networkTransferDao = networkTransferDao;
         this.consolidationDetailsDao = consolidationDetailsDao;
         this.commonUtils = commonUtils;
+        this.consoleShipmentMappingDao = consoleShipmentMappingDao;
     }
 
     private final Map<String, RunnerEntityMapping> tableNames = Map.ofEntries(
@@ -283,13 +286,59 @@ public class NotificationService implements INotificationService {
     }
 
     private void changeNetworkTransferStatus(Notification notification, StringBuilder entityNumber) {
-        Optional< NetworkTransfer > optionalNetworkTransfer = networkTransferDao.findByTenantAndEntity(
-                Math.toIntExact(notification.getRequestedBranchId()), notification.getEntityId(), notification.getEntityType());
+        Optional<NetworkTransfer> optionalNetworkTransfer = networkTransferDao.findByIdWithQuery(notification.getNetworkTransferId());
         if(optionalNetworkTransfer.isPresent()){
-            NetworkTransferStatus status = optionalNetworkTransfer.get().getEntityPayload() != null? NetworkTransferStatus.TRANSFERRED: NetworkTransferStatus.SCHEDULED;
-            optionalNetworkTransfer.get().setStatus(status);
-            networkTransferDao.save(optionalNetworkTransfer.get());
-            entityNumber.append(optionalNetworkTransfer.get().getEntityNumber());
+            NetworkTransfer networkTransfer = optionalNetworkTransfer.get();
+            NetworkTransferStatus status = networkTransfer.getEntityPayload() != null? NetworkTransferStatus.TRANSFERRED: NetworkTransferStatus.SCHEDULED;
+            networkTransfer.setStatus(status);
+            // Revert Status for each console and shipment in case of interbranch
+            List<NetworkTransfer> networkTransferList = new ArrayList<>();
+            networkTransferList.add(networkTransfer);
+            // Overarching Shipment and console update for request to tranfer case
+            overArchingCaseForRequestToTransfer(networkTransfer, notification, networkTransferList);
+            networkTransferDao.saveAll(networkTransferList);
+            entityNumber.append(networkTransfer.getEntityNumber());
+        } else {
+            log.error("No network transfer entity found for given notification");
+            throw new DataRetrievalFailureException("No network transfer entity found for given notification");
+        }
+    }
+
+    void overArchingCaseForRequestToTransfer(NetworkTransfer networkTransfer, Notification notification, List<NetworkTransfer> networkTransferList) {
+        if(Boolean.TRUE.equals(networkTransfer.getIsInterBranchEntity()) && Objects.equals(notification.getNotificationRequestType(), NotificationRequestType.REQUEST_TRANSFER)
+                && Objects.equals(networkTransfer.getEntityType(), Constants.SHIPMENT)) {
+            var consoleShipmentMapping = consoleShipmentMappingDao.findByShipmentId(networkTransfer.getEntityId());
+            if(!CommonUtils.listIsNullOrEmpty(consoleShipmentMapping)) {
+                Long entityId = consoleShipmentMapping.get(0).getConsolidationId();
+                var consoleNTE = networkTransferDao.findByEntityIdAndEntityTypeAndIsInterBranchEntity(List.of(entityId), Constants.CONSOLIDATION, true, List.of(NetworkTransferStatus.REQUESTED_TO_TRANSFER.name()), Constants.DIRECTION_CTS);
+                if (!CommonUtils.listIsNullOrEmpty(consoleNTE)) {
+                    NetworkTransferStatus consoleStatus = consoleNTE.get(0).getEntityPayload() != null? NetworkTransferStatus.TRANSFERRED: NetworkTransferStatus.SCHEDULED;
+                    consoleNTE.get(0).setStatus(consoleStatus);
+                    networkTransferList.add(consoleNTE.get(0));
+                }
+                this.fetchOverarchingConsoleAndShipmentNTE(networkTransferList, entityId, networkTransfer.getEntityId());
+            }
+        } else if(Boolean.TRUE.equals(networkTransfer.getIsInterBranchEntity()) && Objects.equals(notification.getNotificationRequestType(), NotificationRequestType.REQUEST_TRANSFER)
+                && Objects.equals(networkTransfer.getEntityType(), Constants.CONSOLIDATION)) {
+            this.fetchOverarchingConsoleAndShipmentNTE(networkTransferList, networkTransfer.getEntityId(), null);
+        }
+    }
+
+    void fetchOverarchingConsoleAndShipmentNTE(List<NetworkTransfer> networkTransferList, Long consoleId, Long shipId) {
+        var consoleShipMappingList = consoleShipmentMappingDao.findByConsolidationId(consoleId);
+        if(!consoleShipMappingList.isEmpty()){
+            List<Long> shipmentIds = consoleShipMappingList.stream().map(ConsoleShipmentMapping::getShipmentId).filter(shipmentId ->!Objects.equals(shipmentId, shipId)).toList();
+            List<NetworkTransfer> shipmentsNte = new ArrayList<>();
+            if(!CommonUtils.listIsNullOrEmpty(shipmentIds))
+                shipmentsNte = networkTransferDao.findByEntityIdAndEntityTypeAndIsInterBranchEntity(shipmentIds, Constants.SHIPMENT, true, List.of(NetworkTransferStatus.REQUESTED_TO_TRANSFER.name()), Constants.DIRECTION_CTS);
+
+            if(!CommonUtils.listIsNullOrEmpty(shipmentsNte)){
+                shipmentsNte.forEach(nte -> {
+                    NetworkTransferStatus status = nte.getEntityPayload() != null? NetworkTransferStatus.TRANSFERRED: NetworkTransferStatus.SCHEDULED;
+                    nte.setStatus(status);
+                    networkTransferList.add(nte);
+                });
+            }
         }
     }
     private void triggerCancellationEmail(Notification notification, String reason, String entityNumber) {
@@ -308,7 +357,7 @@ public class NotificationService implements INotificationService {
                     template = createRequestToTranferCancellationEmailBody(notification, reason, entityNumber);
             }
             if(!emailList.isEmpty() && template.getBody() != null) {
-                commonUtils.sendEmailNotification(template, emailList, List.of(UserContext.getUser().getEmail()));
+                commonUtils.sendEmailNotification(template, emailList, Arrays.asList(UserContext.getUser().getEmail()));
             }
         } catch (Exception ex) {
             log.error(String.format(ErrorConstants.ERROR_WHILE_EMAIL, ex.getMessage()));
